# idempiere-cli

./: LICENSE  README.md  bootstrap.sh  install.sh  pyproject.toml
idempiere_cli/: interactive.py  main.py  ui.py
idempiere_cli/commands/: check.py  detect.py  install.py  nginx.py
idempiere_cli/core/: config.py  dependencies.py  detection.py  java.py  logger.py  ports.py  postgres.py  resources.py  shell.py  templates.py
idempiere_cli/templates/: idempiereEnv.properties.j2  nginx.conf.j2  systemd.service.j2
installers/: README.md
profiles/: idempiere10-prod.example.yml  idempiere12-arm.example.yml  idempiere12-debian.example.yml  idempiere12-test.example.yml  idempiere12-x86.example.yml
